--- a/Main/index.html
+++ b/Main/index.html
@@ -66,14 +66,14 @@
 
         <a href="#" class="flex-item">
           <div>
-            <h3>Data Analysis Tool</h3>
+            <h3>Military Experience</h3>
             <span>Python / Machine Learning</span>
           </div>
         </a>
 
         <a href="#" class="flex-item">
           <div>
-            <h3>Responsive Design</h3>
+            <h3>Certifications</h3>
             <span>HTML/CSS</span>
           </div>
         </a>
